# r3it

./: .dockerignore  .gitignore  Dockerfile  Readme.md  default.nix  docker-compose.yml  docker_setup.sh  install.py  install.sh  license-gplv3.txt  pyproject.toml  r3it web interface on github.webloc  requirements.txt  shell.nix
.github/workflows/: python-app.yml  traffic-stats.yml
r3it/: .gitignore  __init__.py  appQueue.py  cert.service  cert.target  cert.timer  config.py  configLocal.py  defaults.py  deployment_guide.md  email.py  gunicorn.conf.py  interconnection.py  logger.py  mailer.py  omfDerInterconnection.py  pull_update.sh  queue.py  queueTest.py  r3it.py  r3it.service  r3it.sublime-workspace  start_r3it.py  start_r3it.sh  test_r3it.py  user.py  userTest.py  web.py  wsgi.py
r3it/.github/workflows/: python-package.yml
r3it/data/: queue.csv  queue.json
r3it/data/templates/: Olin Barre Geo Modified DER(no added).omd
r3it/static/: allInputData.json  sorttable.js
r3it/templates/: application.html  applicationSubmitted.html  base.html  customerLanding.html  customerLanding2.html  customerReport.html  delegationrequest.txt  delegationsuccess.html  forgot.html  index.html  login.html  loginCustomer.html  loginEngineer.html  newpassword.html  overview.html  payment.html  queue.html  register.html  report.html  upload.html
r3it/tests/: __init__.py  testHelpers.py  test_appQueue.py  test_logger.py  test_mailer.py  test_user.py  test_web.py
test/: Olin Barre Real Coordinates Lat Lons.geojson  allInputData.json
traffic/: clones.csv  views.csv
(+5 files in other folders)
