[tool.poetry]
name = "r3it"
version = "0.1.0"
description = "Interconnection automation for electric utilities."
authors = ["George Walker <georgewalkeriv@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.0"
Flask-Login = "^0.5.0"
Werkzeug = "^2.0.1"
cachelib = "^0.1.1"
Flask-Session = "^0.3.2"
flask-session-captcha = "^1.2.0"
pygeocodio = "^1.0.0"
stripe = "^2.56.0"
gunicorn = "^20.1.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
